[package]
name = "rust_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json", "cookies"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tokio = { version = "*", features = ["full"] }
http = "*"
scraper = "*"
jsonpath = "*"
